force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Submitted Expense Line</label>
    <nameField>
        <displayFormat>Ex-{00000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submitted Expense Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>