force-app/main/default/objects/Expense__c/fields/Description_Or_Notes_Related_To_Expense__c.field-meta.xml
<CustomField>
    <fullName>Description_Or_Notes_Related_To_Expense__c</fullName>
    <label>Description Or Notes Related To Expense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>