force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Repair/Maintenance</fullName>
            </value>
            <value>
                <fullName>Construction Vehicles expense/fuel</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Entertainment w/ Customers</fullName>
            </value>
            <value>
                <fullName>Entertainment w/Employee</fullName>
            </value>
            <value>
                <fullName>Entertainment w/Vendors</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Job-Related Materials/Expenses</fullName>
            </value>
            <value>
                <fullName>Marketing/Advertising</fullName>
            </value>
            <value>
                <fullName>Meals w/customers</fullName>
            </value>
            <value>
                <fullName>Meal w/Employees</fullName>
            </value>
            <value>
                <fullName>Meal w/Vendor</fullName>
            </value>
            <value>
                <fullName>Mileage - Sales Executives</fullName>
            </value>
            <value>
                <fullName>Office/Break Room Supplies</fullName>
            </value>
            <value>
                <fullName>Office Equipment/Computers</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Personal Car Mileage</fullName>
            </value>
            <value>
                <fullName>Postage/Shipping</fullName>
            </value>
            <value>
                <fullName>Professional Subscription/Dues</fullName>
            </value>
            <value>
                <fullName>Promotional shows/Products</fullName>
            </value>
            <value>
                <fullName>Public Transportation</fullName>
            </value>
            <value>
                <fullName>Seminar/Course fees/Conference</fullName>
            </value>
            <value>
                <fullName>Tolls</fullName>
            </value>
            <value>
                <fullName>Travel - Airfare</fullName>
            </value>
            <value>
                <fullName>Travel - Car Rental</fullName>
            </value>
            <value>
                <fullName>Travel - Hotel</fullName>
            </value>
            <value>
                <fullName>Travel - Meal</fullName>
            </value>
            <value>
                <fullName>Travel - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Uber/Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>