force-app/main/default/objects/Expense__c/fields/Log_A_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_A_Call__c</fullName>
    <label>Log A Call</label>
    <referenceTo>LogACall__c</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>