force-app/main/default/objects/Expense__c/fields/Reason_For_Personal_Expense__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Personal_Expense__c</fullName>
    <label>Reason For Personal Expense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>