force-app/main/default/objects/Expense__c/fields/Split_Expense_Across_Offices__c.field-meta.xml
<CustomField>
    <fullName>Split_Expense_Across_Offices__c</fullName>
    <label>Split Expense Across Offices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saint Louis</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Kansas City</fullName>
            </value>
            <value>
                <fullName>MaRRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>