force-app/main/default/objects/Expense__c/fields/Submit_Request__c.field-meta.xml
<CustomField>
    <fullName>Submit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit Request</label>
    <referenceTo>Submit_Request__c</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>