force-app/main/default/objects/Expense__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF( ISBLANK( Expense_Amount__c ) , 0,  Expense_Amount__c )  +  IF( ISBLANK(Log_A_Call__r.Mileage_Cost__c) , 0 , Log_A_Call__r.Mileage_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>