force-app/main/default/objects/Expense__c/fields/Vendor_Or_Venue__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Or_Venue__c</fullName>
    <label>Vendor Or Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>