force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Log_A_Call__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Reason_For_Personal_Expense__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Vendor_Or_Venue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>