force-app/main/default/objects/Expense__c/listViews/Expenses.listView-meta.xml
<ListView>
    <fullName>Expenses</fullName>
    <columns>Log_A_Call__c</columns>
    <columns>NAME</columns>
    <columns>Expense_Type__c</columns>
    <columns>Description_Or_Notes_Related_To_Expense__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Submit_Request__c</columns>
    <columns>Vendor_Or_Venue__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>Expenses</label>
</ListView>